# LeakLens

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  config.yaml  pyproject.toml  requirements.txt  smoke_test.py
corpus/: build_corpus.py  corpus.jsonl
docs/: ARCHITECTURE.md  BUILD_PLAN.md  DECISIONS.md  DEVELOPMENT.md  PROGRESS.md
leaklens/: __init__.py  __main__.py  _compat.py  cli.py  config.py  finding.py  runner.py
leaklens/adapters/: __init__.py  base.py  chroma_adapter.py
leaklens/inversion/: __init__.py  defenses.py  inverter.py  metrics.py  retrieval.py
leaklens/modules/: __init__.py  base.py  inversion.py
leaklens/report/: __init__.py  html_report.py  json_report.py  owasp.py  scorecard.py
leaklens/validation/: __init__.py  harness.py
results/: validation_matrix.md
scripts/: build_validation_targets.py  embed_corpus.py  merge_sweeps.py  run_inversion_demo.py  run_validation.py
studies/: defense_sweep.py  plot_tradeoff.py
tests/: __init__.py  conftest.py  test_chroma_adapter.py  test_cli.py  test_config.py  test_corpus.py  test_defense_sweep.py  test_defenses.py  test_finding.py  test_inverter.py  test_metrics.py  test_module_inversion.py  test_report.py  test_retrieval.py  test_runner.py  test_sampling.py  test_validation.py
